tests/negative/Alias.tst

alias MyAuto = auto;
alias Err = @auto;

int main()
{
	MyAuto a;

	return 0;
}

========

Alias.syp: can not create alias to auto type
Alias.syp: can't create pointer to auto type
Alias.syp: MyAuto type not declared
found 3 errors
